// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add matches snapshot 1`] = `
<div>
  <div
    class="sc-AxgMl fBmUve"
  >
    <svg>
      plus.svg
    </svg>
  </div>
  <div
    class="sc-AxjAm khxSQh"
  >
    <h2
      class="sc-AxiKw jzoYkp"
    >
      What do you want to track?
    </h2>
    <div
      class="sc-AxhCb bCDkJU"
    >
      <button
        class="sc-AxheI gPascW"
      >
        <span>
          Create a note
        </span>
        <svg>
          notes.svg
        </svg>
      </button>
      <button
        class="sc-AxheI gPascW"
      >
        <span>
          Create a task
        </span>
        <svg>
          tasks.svg
        </svg>
      </button>
      <button
        class="sc-AxheI gPascW"
      >
        <span>
          Add an expense
        </span>
        <svg>
          expenses.svg
        </svg>
      </button>
      <button
        class="sc-AxheI gPascW"
      >
        <span>
          Add an habit
        </span>
        <svg>
          habits.svg
        </svg>
      </button>
    </div>
  </div>
  <div
    class="sc-AxirZ gpexXZ"
  />
</div>
`;

exports[`Add renders all the buttons and the title 1`] = `
<h2
  class="sc-AxiKw jzoYkp"
>
  What do you want to track?
</h2>
`;

exports[`Add renders all the buttons and the title 2`] = `
<span>
  Create a note
</span>
`;

exports[`Add renders all the buttons and the title 3`] = `
<span>
  Create a task
</span>
`;

exports[`Add renders all the buttons and the title 4`] = `
<span>
  Add an expense
</span>
`;

exports[`Add renders all the buttons and the title 5`] = `
<span>
  Add an habit
</span>
`;

exports[`AddTask matches snapshot 1`] = `
<div>
  <input
    class="sc-Axmtr doLFLl"
    placeholder="Ex: Take out the trash"
    type="text"
    value=""
  />
  <div
    class="sc-fzozJi iNhwPK"
  >
    <div
      class="sc-fzoLsD cnPPqL"
    >
      <div
        class="sc-AxhUy jCZCjm"
      >
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <svg>
              calendr.svg
            </svg>
            <input
              type="text"
              value="3 Sep"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-fzoLsD cnPPqL"
    >
      <span>
        <svg>
          notes.svg
        </svg>
      </span>
      <div
        class="MuiInputBase-root MuiInput-root"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="add-category"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          id="add-category"
          role="button"
          tabindex="0"
        >
          Inbox
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value="0"
        />
        <svg
          class="MuiSelect-icon"
        >
          chevron.svg
        </svg>
      </div>
    </div>
    <button
      class="sc-fzpans hckgSo"
    >
      <svg>
        chevron.svg
      </svg>
    </button>
  </div>
</div>
`;
